# UniversityProjects

./: README.md
Year I/First Semester/Computer Systems Architecture/Lab 11/: isprime.asm  main_file.asm
Year I/First Semester/Computer Systems Architecture/Lab 12/: printDecimals.asm
Year I/First Semester/Computer Systems Architecture/Lab 3/: lab3_addition_pt1_ex9.asm  lab3_addition_pt2_ex9.asm  lab3_mul_div_signed_ex9.asm  lab3_mul_div_unsigned_ex9.asm
Year I/First Semester/Computer Systems Architecture/Lab 4/: lab4_ex8.asm
Year I/First Semester/Computer Systems Architecture/Lab 5/: lab5.asm
Year I/First Semester/Computer Systems Architecture/Lab 6/: lab6_ex11.asm  lab6_ex7.asm  lab6_ex8.asm
Year I/First Semester/Computer Systems Architecture/Lab 8/: lab8_23_function_calls.asm  lab8_8_files.asm  lab8_8_function_calls.asm
Year I/First Semester/Fundamentals Of Programming/Connect Four/: README.md  main.py
Year I/First Semester/Fundamentals Of Programming/Student lab assignment/: README.md  main.c
Year I/Second Semester/Data Structures And Algorithms/: README.md
Year I/Second Semester/Data Structures And Algorithms/SortedBag L5 - 6/: README.md  (+7 more)
Year I/Second Semester/Data Structures And Algorithms/SortedMultiMap L4 - 39/: CMakeLists.txt  ExtendedTest.cpp  README.md  SMMIterator.cpp  SMMIterator.h  ShortTest.cpp  SortedMultiMap.cpp  SortedMultiMap.h
Year II/First Semester/Databases/: FitnessTracker.sql  Generators.sql  Lab4_Procedures.sql  Lab5.sql  Procedures.sql  Queries.sql  TestProcedures.sql
Year II/First Semester/PLF/: backtracking in Prolog.txt
(+1033 files in other folders)
