cmake_minimum_required(VERSION 3.17)
project(SortedMultiMap___39)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(SortedMultiMap___39
        App.cpp
        ExtendedTest.cpp
        ExtendedTest.h
        ShortTest.cpp
        ShortTest.h
        SMMIterator.cpp
        SMMIterator.h
        SortedMultiMap.cpp
        SortedMultiMap.h)
